Fix image alignment and margins in portrait

--- a/main.css
+++ b/main.css
@@ -798,6 +798,21 @@ input[type="submit"]:hover {
 }
 
 @media screen and (max-width: 768px) and (orientation:portrait){
+    .portfolio-img-right img {
+        filter: drop-shadow(0px 0px 1rem #000000a9);
+    }
+
+    .portfolio-img-left img {
+        filter: drop-shadow(0px 0px 1rem #000000a9);
+    }
+
+    .has-margin-right {
+        margin-right: 0;
+    }
+
+    img {
+        filter: drop-shadow(0px 0px 1rem #000000a9);
+    }
 
     .nav-list {
         flex-direction: column;
@@ -840,6 +855,11 @@ input[type="submit"]:hover {
     
     .portfolio-item {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .portfolio-item h6 {
+        margin-top: 1rem;
     }
     
     .portfolio-img-right .portfolio-img-left {
@@ -853,6 +873,10 @@ input[type="submit"]:hover {
     }
     
     .portfolio-description .cta {
+        margin-top: 0;
+    }
+
+    .portfolio-description p {
         margin-top: 0;
     }
     
